--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
   },
   "private": true,
   "dependencies": {
-    "@fluentui/react-components": "^9.18.0",
-    "@microsoft/teams-js": "^2.22.0",
-    "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0",
-    "axios": "^0.21.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
+    "@azure/msal-browser": "3.15",
+    "@fluentui/react-components": "^9.53.0",
+    "@microsoft/mgt-react": "^4.2.1",
+    "@microsoft/mgt-teamsfx-provider": "^4.2.1",
+    "@microsoft/teams-js": "^2.23.0",
+    "@microsoft/teamsfx": "^2.3.2",
+    "@microsoft/teamsfx-react": "^3.1.2",
+    "axios": "^1.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/node": "^20.12.13",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "concurrently": "^8.2.2",
     "env-cmd": "^10.1.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.6"
   },
   "scripts": {
     "dev:teamsfx": "concurrently \"npm run dev-tab:teamsfx\" \"npm run dev-api:teamsfx\"",
