--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   },
   "private": true,
   "dependencies": {
-    "@azure/msal-browser": "3.15",
     "@fluentui/react-components": "^9.53.0",
     "@microsoft/mgt-react": "^4.2.1",
     "@microsoft/mgt-teamsfx-provider": "^4.2.1",
-    "@microsoft/teams-js": "^2.23.0",
-    "@microsoft/teamsfx": "^2.3.2",
-    "@microsoft/teamsfx-react": "^3.1.2",
+    "@microsoft/teams-js": "^2.22.0",
+    "@microsoft/teamsfx": "2.3.0",
+    "@microsoft/teamsfx-react": "3.1.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
